--- a/html/update-method.html
+++ b/html/update-method.html
@@ -382,7 +382,7 @@
 <p>Now that those have been moved into the <code>Statue</code> class itself, you can create as many as you want and each instance will have its own little timer. That&#8217;s really the motivation behind this pattern: it&#8217;s now much easier to add new entities to the game world because each one brings along everything it needs to take care of itself.</p>
 <p>This pattern lets us separate <em>populating</em> the game world from <em>implementing</em> it. This in turn gives us the flexibility to populate the world using something like a separate data file or level editor.</p>
 <h3><a href="#passing-time" name="passing-time">Passing time</a></h3>
-<p>That&#8217;s key pattern, but I&#8217;ll just touch on a common refinement. So far, we&#8217;ve assumed every call to <code>update()</code> advances the state of the game world by the same fixed unit of time.</p>
+<p>That&#8217;s the key pattern, but I&#8217;ll just touch on a common refinement. So far, we&#8217;ve assumed every call to <code>update()</code> advances the state of the game world by the same fixed unit of time.</p>
 <p>I happen to prefer that, but many games use a <span name="variable"><em>variable time step</em></span>. In those, each turn of the game loop may simulate a larger or smaller slice of time depending on how long it took to process and render the previous frame.</p>
 <aside name="variable">
 
