--- a/html/prototype.html
+++ b/html/prototype.html
@@ -345,7 +345,7 @@
 <p>That&#8217;s great, but pushing piles of content into data files doesn&#8217;t magically solve the organizational challenges of a large project. If anything, it makes it harder. The reason we use programming languages is because they have tools for managing complexity.</p>
 <p>Instead of copying and pasting a chunk of code in ten places, we move it into a function that we can call by name. Instead of copying a method in a bunch of classes, we can put it in a separate class that those classes inherit from or mix in.</p>
 <p>When your game&#8217;s data reaches a certain size, you really start wanting similar features. Data modelling is a deep subject that I can&#8217;t hope to do justice here, but I do want to throw out one feature for you to consider in your own games: using prototypes and delegation for reusing data.</p>
-<p>Lets say we&#8217;re defining the data model for the <span name="shameless">shameless Gauntlet rip-off</span> I mentioned earlier. The game designers need to specify the attributes for monsters and items in some kind of files.</p>
+<p>Let&#8217;s say we&#8217;re defining the data model for the <span name="shameless">shameless Gauntlet rip-off</span> I mentioned earlier. The game designers need to specify the attributes for monsters and items in some kind of files.</p>
 <aside name="shameless">
 
 <p>I mean completely original title in no way inspired by any previously existing top-down multi-player dungeon crawl arcade games. Please don&#8217;t sue me.</p>
