--- a/html/double-buffer.html
+++ b/html/double-buffer.html
@@ -472,7 +472,7 @@ actor he faces.</p>
 </pre></div>
 
 
-<p>Now lets throw some comedians on a stage and see what happens. We&#8217;ll
+<p>Now, let&#8217;s throw some comedians on a stage and see what happens. We&#8217;ll
 set up three comedians, each facing the next. The last one will face
 the first, in a big circle:</p>
 <div class="codehilite"><pre><span class="n">Stage</span> <span class="n">stage</span><span class="p">;</span>
@@ -495,7 +495,7 @@ the first, in a big circle:</p>
 The arrows show who is facing who, and the numbers show their index
 in the stage&#8217;s array:</p>
 <p><img src="images/double-buffer-slaps-1.png" /></p>
-<p>Now, let&#8217;s slap Harry to get things going and see what happens when
+<p>We&#8217;ll slap Harry to get things going and see what happens when
 we start processing:</p>
 <div class="codehilite"><pre><span class="n">harry</span><span class="o">-&gt;</span><span class="n">slap</span><span class="p">();</span>
 
@@ -517,8 +517,8 @@ occurs:</p>
 
 
 <p>So, in a single frame, our initial slap on Harry has propagated
-through all of the comedians. Now let&#8217;s mix things up a bit. Lets say
-we reorder the comedians within the stages array, but leaving them
+through all of the comedians. Now, to mix things up a bit, let&#8217;s say
+we reorder the comedians within the stages array, but leave them
 still facing each other the same way.</p>
 <p><img src="images/double-buffer-slaps-2.png" /></p>
 <p>We&#8217;ll leave the rest of the stage setup alone, but replace the chunk
