--- a/html/subclass-sandbox.html
+++ b/html/subclass-sandbox.html
@@ -625,13 +625,17 @@ one by outside code, it just fetches one itself from the service locator.</p>
     update method will very often also be a sandbox method.</p>
 </li>
 <li>
-<p>The <a class="gof-pattern" href="http://en.wikipedia.org/wiki/Template_method_pattern">Template Method Pattern</a> pattern is basically the inverse
-    of this. In that pattern, the base class defines a single high-level
-    method that it implements by calling primitive operations. These primitive
-    operations are abstract and get implemented by the subclasses.</p>
-<p>So where the Subclass Sandbox pattern provides the primitives and delegates
-the high-level behavior to subclasses, the Template Method Pattern provides
-the high-level behavior and delegates the primitives.</p>
+<p>This pattern is a role reversal of the <a class="gof-pattern"
+    href="http://en.wikipedia.org/wiki/Template_method_pattern">Template Method
+    Pattern</a>. In both patterns, you implement a method using a set of primitive operations. With Subclass Sandbox, the method is in
+    the derived class and the primitive operations are in the base class. With
+    Template Method, the <em>base</em> class has the method and the primitive
+    operations are implemented by the <em>derived</em> class.</p>
+</li>
+<li>
+<p>You can also consider this a variation on the <a class="gof-pattern"
+    href="http://en.wikipedia.org/wiki/Template_method_pattern">Facade
+    Pattern</a>. That pattern hides a number of different systems behind a single simplified API. With Subclass Sandbox, the base class acts as a facade thats hides the entire game engine from the subclasses.</p>
 </li>
 </ul>
 <nav>
